# noxious-map

./: .gitignore  README.md  main.py  pyproject.toml
html/: .htaccess  index.html  index.php  mobs.html  run.py  start.html
html/js/: map-ids-old.json  map-ids.json  markers.json  metadata.json  script.js
html/js/tiled/: maps.tsx  world.tmx
src/noxious_map/: __init__.py  downloader.py  tiled.py  types.py  utils.py
src/noxious_map/generator/: __init__.py  base.py  maps.py  mobs.py
src/noxious_map/generator/templates/: mobs.html
src/noxious_map/models/: __init__.py  item.py  map.py  map_object.py
tiled/: maps.tsx  world.tmx
tiled/extensions/: selectAttachedPins.js
